// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders PrimaryLine correctly 1`] = `
<span
  className="flex-parent flex-parent--column"
>
  <p
    className="flex-child truncate-3-lines my6 txt-break-url"
  >
    #hotosm-project-2999 #MissingMaps #EndMalaria #Mali
  </p>
  <span
    className="mb3"
  >
    <span
      className="mr6"
    >
      <span
        className="color-blue-dark inline-block bg-blue-faint px6 txt-s txt-bold"
      >
        mass deletion
      </span>
    </span>
    <span
      className="mr6"
    >
      <span
        className="color-blue-dark inline-block bg-blue-faint px6 txt-s txt-bold"
      >
        Randomized flag
      </span>
    </span>
  </span>
  <span
    className="mb3"
  >
    <span
      className="mr6"
    >
      <span
        className="color-red-dark inline-block bg-red-faint px6 txt-s txt-bold"
      >
        intentional
      </span>
    </span>
    <span
      className="mr6"
    >
      <span
        className="color-red-dark inline-block bg-red-faint px6 txt-s txt-bold"
      >
        unintentional
      </span>
    </span>
  </span>
</span>
`;

exports[`renders active row properly 1`] = `
<a
  href="/changesets/49328744"
  onClick={[Function]}
>
  <div
    className="light-blue border-l border-l--4 border-color-bad"
  >
    <div
      className="p12 cursor-pointer flex-parent flex-parent--column border-b border-b--1 border--gray-light"
    >
      <div
        className="flex-parent flex-parent--column"
      >
        <div>
          <div>
            <span
              className="flex-parent flex-parent--row justify--space-between align-items--center"
            >
              <span
                className="txt-m txt-bold mt3 mr6"
              >
                DaryR
              </span>
              <span
                className="txt-s mr3"
              >
                 
                4 days ago
              </span>
            </span>
          </div>
        </div>
        <div>
          <span
            className="flex-parent flex-parent--column"
          >
            <p
              className="flex-child truncate-3-lines my6 txt-break-url"
            >
              #hotosm-project-2999 #MissingMaps #EndMalaria #Mali
            </p>
            <span
              className="mb3"
            >
              <span
                className="mr6"
              >
                <span
                  className="color-blue-dark inline-block bg-blue-faint px6 txt-s txt-bold"
                >
                  mass deletion
                </span>
              </span>
              <span
                className="mr6"
              >
                <span
                  className="color-blue-dark inline-block bg-blue-faint px6 txt-s txt-bold"
                >
                  Randomized flag
                </span>
              </span>
            </span>
            <span
              className="mb3"
            >
              <span
                className="mr6"
              >
                <span
                  className="color-red-dark inline-block bg-red-faint px6 txt-s txt-bold"
                >
                  intentional
                </span>
              </span>
              <span
                className="mr6"
              >
                <span
                  className="color-red-dark inline-block bg-red-faint px6 txt-s txt-bold"
                >
                  unintentional
                </span>
              </span>
            </span>
          </span>
        </div>
        <div>
          <span
            className="flex-parent flex-parent--row justify--space-between txt-light txt-s color-gray"
          >
            <span>
              <span
                className="mr6"
              >
                49328744
              </span>
              <span>
                <img
                  alt="Marked as bad"
                  className="icon inline-block"
                  src="thumbs-down.svg"
                />
                  by 
                nammala
              </span>
            </span>
            <span
              className="flex-parent flex-parent--row"
            >
              <div
                className="flex-parent flex-parent--row flex-parent--wrap mr3"
              >
                <div
                  className="cmap-bg-create  color-white inline-block px6 txt-s txt-bold round unround-r"
                >
                  1624
                </div>
                <div
                  className="cmap-bg-modify-old  color-white inline-block px6  txt-s txt-bold unround"
                >
                  26
                </div>
                <div
                  className="cmap-bg-delete color-white inline-block px6 txt-s txt-bold round unround-l"
                >
                  2666
                </div>
              </div>
            </span>
          </span>
        </div>
      </div>
    </div>
  </div>
</a>
`;

exports[`renders inactive row properly 1`] = `
<a
  href="/changesets/49328744"
  onClick={[Function]}
>
  <div
    className=" border-l border-l--4 border-color-bad"
  >
    <div
      className="p12 cursor-pointer flex-parent flex-parent--column border-b border-b--1 border--gray-light"
    >
      <div
        className="flex-parent flex-parent--column"
      >
        <div>
          <div>
            <span
              className="flex-parent flex-parent--row justify--space-between align-items--center"
            >
              <span
                className="txt-m txt-bold mt3 mr6"
              >
                DaryR
              </span>
              <span
                className="txt-s mr3"
              >
                 
                4 days ago
              </span>
            </span>
          </div>
        </div>
        <div>
          <span
            className="flex-parent flex-parent--column"
          >
            <p
              className="flex-child truncate-3-lines my6 txt-break-url"
            >
              #hotosm-project-2999 #MissingMaps #EndMalaria #Mali
            </p>
            <span
              className="mb3"
            >
              <span
                className="mr6"
              >
                <span
                  className="color-blue-dark inline-block bg-blue-faint px6 txt-s txt-bold"
                >
                  mass deletion
                </span>
              </span>
              <span
                className="mr6"
              >
                <span
                  className="color-blue-dark inline-block bg-blue-faint px6 txt-s txt-bold"
                >
                  Randomized flag
                </span>
              </span>
            </span>
            <span
              className="mb3"
            >
              <span
                className="mr6"
              >
                <span
                  className="color-red-dark inline-block bg-red-faint px6 txt-s txt-bold"
                >
                  intentional
                </span>
              </span>
              <span
                className="mr6"
              >
                <span
                  className="color-red-dark inline-block bg-red-faint px6 txt-s txt-bold"
                >
                  unintentional
                </span>
              </span>
            </span>
          </span>
        </div>
        <div>
          <span
            className="flex-parent flex-parent--row justify--space-between txt-light txt-s color-gray"
          >
            <span>
              <span
                className="mr6"
              >
                49328744
              </span>
              <span>
                <img
                  alt="Marked as bad"
                  className="icon inline-block"
                  src="thumbs-down.svg"
                />
                  by 
                nammala
              </span>
            </span>
            <span
              className="flex-parent flex-parent--row"
            >
              <div
                className="flex-parent flex-parent--row flex-parent--wrap mr3"
              >
                <div
                  className="cmap-bg-create  color-white inline-block px6 txt-s txt-bold round unround-r"
                >
                  1624
                </div>
                <div
                  className="cmap-bg-modify-old  color-white inline-block px6  txt-s txt-bold unround"
                >
                  26
                </div>
                <div
                  className="cmap-bg-delete color-white inline-block px6 txt-s txt-bold round unround-l"
                >
                  2666
                </div>
              </div>
            </span>
          </span>
        </div>
      </div>
    </div>
  </div>
</a>
`;
